[package]
name = "blake3-wasm-rs"
version = "0.5.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Thomas <tom@unebaguette.fr>"]
publish = false
repository = "https://github.com/UneBaguette/blake3.wasm"
description = "Simple blake3 to wasm project"
keywords = ["blake3", "wasm", "hash", "cryptography", "wasm-bindgen"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
talc = ["dep:talc"]

[dependencies]
blake3 = { version = "1.8", features = ["wasm32_simd"] }
wasm-bindgen = "=0.2.118"

[dev-dependencies]
wasm-bindgen-test = "0.3"
hex = "0.4"

[target.'cfg(target_family = "wasm")'.dependencies]
talc = { version = "5", optional = true }