[package]
name = "blake3-wasm-rs"
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Thomas <tom@unebaguette.fr>"]
publish = false
repository = "https://github.com/UneBaguette/blake3.wasm"
description = "BLAKE3 hashing with optional WASM bindings"
keywords = ["blake3", "wasm", "hash", "cryptography", "wasm-bindgen"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]
talc = ["dep:talc"]

[dependencies]
blake3 = { version = "1", features = ["wasm32_simd"] }
wasm-bindgen = { version = "=0.2.118", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
hex = "0.4"

[target.'cfg(target_family = "wasm")'.dependencies]
talc = { version = "5", optional = true }